# CliCourier

./: .env.example  .gitignore  ARCHITECTURE.md  COMMANDS.md  README.md  ROADMAP.md  SECURITY.md  install.sh  pyproject.toml
.playwright-cli/: page-2026-04-25T13-34-02-535Z.yml  page-2026-04-25T13-54-58-294Z.yml
docs/: brand.md  mini-app-console.md  telegram-message-editing.md
scripts/: numbered_line_agent.py  verify_telegram_web_editing.py
src/cli_courier/: __init__.py  app.py  chat_history.py  cli.py  config.py  daemon.py  doctor.py  local_config.py  model_manager.py  setup.py  state.py  update.py
src/cli_courier/agent/: __init__.py  adapters.py  approval.py  chunking.py  claude_jsonl.py  codex_jsonl.py  events.py  gemini_jsonl.py  output_filter.py  pty.py  session.py  structured.py  tmux.py
src/cli_courier/filesystem/: __init__.py  sandbox.py
src/cli_courier/screenshots/: __init__.py  service.py
src/cli_courier/security/: terminal.py
src/cli_courier/telegram_bot/: __init__.py  auth.py  commands.py  dashboard.py  output_renderer.py  router.py  runtime.py
src/cli_courier/voice/: __init__.py  transcriber.py
src/clicourier/: __init__.py  cli.py
tests/fixtures/: fake_agent.py
tests/integration/: test_fake_agent_session.py
tests/unit/: test_agent.py  test_auth_router.py  test_chat_history.py  test_cli.py  test_config.py  test_daemon.py  test_filesystem_sandbox.py  test_gemini_jsonl.py  test_output_renderer.py  test_screenshots.py  test_update.py  test_voice.py  test_voice_benchmark.py
